--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>Dog Compilation</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <header>
-      <div id="Container">
-        <h1>Woof Woof</h1>
-        <p>All kind of Woofs</p>
-      </div>
-    </header>
-    <aside>
-      <ul id="listdogs"></ul>
-    </aside>
-    <main></main>
-    <section>
-      <ul id="subBreed"> </ul>
-    </section>
+  <header> </header> <!-- top bild -->
+
+      <nav> </nav> <!-- list med breeds -->
+      <section>  </section> <!-- list med sub breeds -->
+      <main> <!-- bild och knapp-->
+        <h1></h1> <!-- breed/subbreed info -->
+        <img src="" alt="">
+        <button type="button" name="refresh"> New picture </button>
+      </main>
 
   </body>
 </html>
